--- a/posts/marathon-knee-study/index.qmd
+++ b/posts/marathon-knee-study/index.qmd
@@ -16,21 +16,17 @@ To find the truth into this matter, we are going to look into a [study of 3,804 
 
 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/CdV3IPxr4U8/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
 
-:::::::::::::::::::::::::::: {style="padding:16px;"}
+::: {style="padding:16px;"}
 <a href="https://www.instagram.com/p/CdV3IPxr4U8/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
 
-::::::: {style=" display: flex; flex-direction: row; align-items: center;"}
-::: {style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"}
+::::::: {style=" display: flex; flex-direction: row; align-items: center;"} ::: {style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"}
 :::
 
-::::: {style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;"}
+::: {style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;"}
 ::: {style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"}
 :::
 
-::: {style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"}
-:::
-:::::
-:::::::
+::: {style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"} ::: ::::: :::::::
 
 ::: {style="padding: 19% 0;"}
 :::
@@ -43,16 +39,16 @@ To find the truth into this matter, we are going to look into a [study of 3,804 
 </svg>
 :::
 
-:::: {style="padding-top: 8px;"}
-::: {style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"}
-View this post on Instagram
+::: {style="padding-top: 8px;"}
+::: {style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"} View this post on Instagram
 :::
+
 ::::
 
 ::: {style="padding: 12.5% 0;"}
 :::
 
-:::::::::::::: {style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;"}
+:::::::: {style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;"}
 <div>
 
 ::: {style="background-color: #F4F4F4; border-radius: 50%; height: 12.5px; width: 12.5px; transform: translateX(0px) translateY(7px);"}
@@ -66,33 +62,28 @@ View this post on Instagram
 
 </div>
 
-::::: {style="margin-left: 8px;"}
+::: {style="margin-left: 8px;"}
 ::: {style=" background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 20px; width: 20px;"}
 :::
 
 ::: {style=" width: 0; height: 0; border-top: 2px solid transparent; border-left: 6px solid #f4f4f4; border-bottom: 2px solid transparent; transform: translateX(16px) translateY(-4px) rotate(30deg)"}
-:::
+::::::::
+
 :::::
 
-:::::: {style="margin-left: auto;"}
+::: {style="margin-left: auto;"}
 ::: {style=" width: 0px; border-top: 8px solid #F4F4F4; border-right: 8px solid transparent; transform: translateY(16px);"}
 :::
 
-::: {style=" background-color: #F4F4F4; flex-grow: 0; height: 12px; width: 16px; transform: translateY(-4px);"}
-:::
+::: {style=" background-color: #F4F4F4; flex-grow: 0; height: 12px; width: 16px; transform: translateY(-4px);"} :::
 
-::: {style=" width: 0; height: 0; border-top: 8px solid #F4F4F4; border-left: 8px solid transparent; transform: translateY(-4px) translateX(8px);"}
-:::
-::::::
-::::::::::::::
+::: {style=" width: 0; height: 0; border-top: 8px solid #F4F4F4; border-left: 8px solid transparent; transform: translateY(-4px) translateX(8px);"} ::: :::::: ::::::::::::::
 
-::::: {style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center; margin-bottom: 24px;"}
+::: {style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center; margin-bottom: 24px;"}
 ::: {style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 224px;"}
 :::
 
-::: {style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 144px;"}
-:::
-:::::
+::: {style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 144px;"} ::: :::::
 
 </a>
 
@@ -101,6 +92,7 @@ View this post on Instagram
 <a href="https://www.instagram.com/p/CdV3IPxr4U8/?utm_source=ig_embed&amp;utm_campaign=loading" style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;" target="_blank">A post shared by Chicago Marathon (@chimarathon)</a>
 
 </p>
+
 ::::::::::::::::::::::::::::
 
 </blockquote>
@@ -122,7 +114,7 @@ In this study, researchers were looking for the Odds Ratio (OR). In more simple 
 The table below shows the results of the multivariable logistic regression. Notice how the running factors stay right near 1.0 while health factors are above 1.0
 
 | Risk Factor | Odds Ratio (OR) | 95% Confidence Interval | p-value | Impact on Arthritis |
-|----|:--:|:--:|:--:|:--:|
+|---------------|:-------------:|:-------------:|:-------------:|:-------------:|
 | Weekly Mileage | 0.99 | 0.98 - 1.01 | 0.36 | No Association |
 | Total Years of Running | 1.00 | 0.98 - 1.01 | 0.66 | No Association |
 | Number of Marathons | 1.00 | 0.99 - 1.01 | 0.56 | No Association |
@@ -167,6 +159,8 @@ The risk of developing arthritis is not running itself but the factors of the ru
 So should you be committing to that full marathon training plan? The data says yes, there is no problem (other than the huge time commitment but that's a topic for another day). Although 24.2% of runners in this study were told by their healthcare professional to stop running, the numbers show that many of the warnings might have been based more on old beliefs than current evidence.
 
 For the healthy amateur runner, your knees are much more sturdier than your friends and family believe. So go ahead and sign up for your first marathon (or your 50th!), and begin your marathon journey.
+
+![See everyone at the next start line!](wmm-medals.jpg){width="300"}
 
 ------------------------------------------------------------------------
 
